minor CSS tweak to stop overlap on shoppinglist

--- a/css/layout.css
+++ b/css/layout.css
@@ -88,3 +88,6 @@ select {
 .gasLogo {
     height: 90%;
 }
+#shoppingInput{
+  margin-top: 2em;
+}
